landing page overflow fixed

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -96,31 +96,6 @@ body {
   cursor: pointer;
   text-decoration: underline;
 }
-/*Guest Page */
-/* .record-screen-bg {
-  position: absolute;
-  height: 100vh;
-  width: 100vw;
-  background-image: url("/public/bgs/amazon.jpg");
-  background-position: center center;
-  background-size: cover;
-} */
-
-/* .record-screen {
-  position: relative;
-  top: 50px;
-} */
-
-/* dashboard
-.dashboard {
-  position: absolute;
-  height: 100vh;
-  width: 100vw;
-  background-image: url("/public/bgs/mountains.jpg");
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-} */
 
 /* Mobile menu */
 .dashboard-menu {
