--- a/frontend/src/css/landingpage.css
+++ b/frontend/src/css/landingpage.css
@@ -1,4 +1,4 @@
-*{
+.landing-screen{
   overflow-y: hidden;
 }
 
